[package]
name = "libcrypto"
version = "0.3.2"
authors = ["hermitsage <dth.bht@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1"
libsecp256k1 = { version = "0.7" }
asn1_der = "0.7"
rand = "^0.8"
ring = { version = "0.16", features = ["alloc", "std"], default-features = false }
openssl = "0"
anyhow = "1"
base64 = "0"

[dependencies.ed25519-dalek]
version = "2"
features = ["serde", "rand_core"]

[dev-dependencies]
quickcheck = "1"

[features]
rsa = []
secp256k1 = []
ed25519 = []
default = ["ed25519", "secp256k1"]